--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
 [submodule "Engine/External/glm-0.9.9.8"]
 	path = Engine/External/glm-0.9.9.8
-	url = https://github.com/g-truc/glm/
+	url = https://github.com/g-truc/glm.git
+	branch = 0.9.8
 [submodule "Engine/External/glfw-3.3.6"]
 	path = Engine/External/glfw-3.3.6
-	url = https://github.com/glfw/glfw
+	url = https://github.com/glfw/glfw.git
+	branch = 3.3.6
 [submodule "Engine/External/assimp-5.0.1"]
 	path = Engine/External/assimp-5.0.1
-	url = https://github.com/assimp/assimp
+	url = https://github.com/assimp/assimp.git
